--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 27 13:11:38 2018</p>
+         Last Run: Wed Jun 27 13:19:46 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning / Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jun 28, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -30,10 +30,10 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Overcast</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>39</td>
+                        <td>18</td>
                         <td>51</td>
                         <td>1</td>
                         <td>13</td>
@@ -42,39 +42,39 @@
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>34</td>
+                        <td>14</td>
                         <td>53</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>86</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>19</td>
-                        <td>58</td>
+                        <td>10</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>84</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>32</td>
-                        <td>69</td>
+                        <td>24</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>82</td>
+                        <td>13</td>
+                        <td>WSW</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "39",
-                 "34",
-                 "19",
-                 "32"
+                 "18",
+                 "14",
+                 "10",
+                 "24"
                ]
              },
              {
@@ -199,8 +199,8 @@
                "data":[
                  "51",
                  "53",
-                 "58",
-                 "69"
+                 "57",
+                 "68"
                ]
              },
              {
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "85",
-                 "86",
-                 "84",
-                 "82"
+                 "73",
+                 "75",
+                 "76"
                ]
              }
            ]
@@ -228,9 +228,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 27 13:11:38 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 05, 2018 -  6:30PM til  8:00PM</H4>
+         Last Run: Wed Jun 27 13:19:46 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage Santos/Arsenal/Premier 03 - Lubarsky Fields</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 30, 2018 - 12:00PM til  2:30PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -248,40 +248,64 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>06:00 PM</td>
-                        <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>1</td>
-                        <td>40</td>
-                        <td>2</td>
-                        <td>13</td>
+                        <td>11:00 AM</td>
+                        <td>Partly Cloudy</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>24</td>
+                        <td>55</td>
+                        <td>4</td>
+                        <td>6</td>
                         <td>SSW</td>
-                        <td>16</td>
-                     </tr>
-                     <tr>
-                        <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>2</td>
-                        <td>43</td>
-                        <td>1</td>
-                        <td>16</td>
-                        <td>SW</td>
-                        <td>18</td>
-                     </tr>
-                     <tr>
-                        <td>08:00 PM</td>
-                        <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>3</td>
                         <td>46</td>
-                        <td>0</td>
-                        <td>14</td>
+                     </tr>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>39</td>
+                        <td>51</td>
+                        <td>5</td>
+                        <td>8</td>
+                        <td>SSW</td>
+                        <td>55</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Overcast</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>24</td>
+                        <td>48</td>
+                        <td>4</td>
+                        <td>8</td>
+                        <td>SSW</td>
+                        <td>83</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Overcast</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>23</td>
+                        <td>49</td>
+                        <td>4</td>
+                        <td>8</td>
+                        <td>SSW</td>
+                        <td>86</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Overcast</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>24</td>
+                        <td>48</td>
+                        <td>3</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>20</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -314,9 +338,11 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator3").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
-             "07:00 PM",
-             "08:00 PM"
+             "11:00 AM",
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
            ],
            "datasets":[
              {
@@ -325,9 +351,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
-                 "19",
-                 "18"
+                 "15",
+                 "16",
+                 "16",
+                 "16",
+                 "16"
                ]
              },
              {
@@ -336,9 +364,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
-                 "19",
-                 "18"
+                 "15",
+                 "16",
+                 "16",
+                 "16",
+                 "16"
                ]
              }
            ]
@@ -379,9 +409,11 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator4").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
-             "07:00 PM",
-             "08:00 PM"
+             "11:00 AM",
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
            ],
            "datasets":[
              {
@@ -389,9 +421,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "2",
-                 "3"
+                 "24",
+                 "39",
+                 "24",
+                 "23",
+                 "24"
                ]
              },
              {
@@ -399,9 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "40",
-                 "43",
-                 "46"
+                 "55",
+                 "51",
+                 "48",
+                 "49",
+                 "48"
                ]
              },
              {
@@ -409,9 +445,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "18",
-                 "20"
+                 "46",
+                 "55",
+                 "83",
+                 "86",
+                 "90"
                ]
              }
            ]
