--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 27 13:19:46 2018</p>
+         Last Run: Thu Jun 28 12:26:55 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning / Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jun 28, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -31,50 +31,50 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Overcast</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>18</td>
-                        <td>51</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>24</td>
+                        <td>47</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>W</td>
-                        <td>85</td>
+                        <td>14</td>
+                        <td>SSE</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>14</td>
-                        <td>53</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>19</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>W</td>
-                        <td>73</td>
+                        <td>S</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>10</td>
-                        <td>57</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>21</td>
+                        <td>54</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>WSW</td>
-                        <td>75</td>
+                        <td>11</td>
+                        <td>SW</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>24</td>
-                        <td>68</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>31</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>WSW</td>
-                        <td>76</td>
+                        <td>W</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,10 +119,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
-                 "16",
-                 "15",
-                 "14"
+                 "17",
+                 "17",
+                 "17",
+                 "15"
                ]
              },
              {
@@ -131,10 +131,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
-                 "16",
-                 "15",
-                 "14"
+                 "17",
+                 "17",
+                 "17",
+                 "15"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "14",
-                 "10",
-                 "24"
+                 "24",
+                 "19",
+                 "21",
+                 "31"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "53",
-                 "57",
-                 "68"
+                 "47",
+                 "49",
+                 "54",
+                 "64"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "85",
-                 "73",
-                 "75",
-                 "76"
+                 "82",
+                 "79",
+                 "77",
+                 "79"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 27 13:19:46 2018</p>
+         Last Run: Thu Jun 28 12:26:55 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage Santos/Arsenal/Premier 03 - Lubarsky Fields</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 30, 2018 - 12:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -250,62 +250,62 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>24</td>
-                        <td>55</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>3</td>
+                        <td>49</td>
                         <td>4</td>
-                        <td>6</td>
-                        <td>SSW</td>
-                        <td>46</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>39</td>
-                        <td>51</td>
+                        <td>Partly Cloudy</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>10</td>
+                        <td>46</td>
                         <td>5</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSW</td>
                         <td>55</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>24</td>
-                        <td>48</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>15</td>
+                        <td>46</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>11</td>
                         <td>SSW</td>
-                        <td>83</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>23</td>
-                        <td>49</td>
-                        <td>4</td>
-                        <td>8</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>15</td>
+                        <td>47</td>
+                        <td>3</td>
+                        <td>11</td>
                         <td>SSW</td>
-                        <td>86</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Overcast</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>24</td>
-                        <td>48</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>15</td>
+                        <td>45</td>
                         <td>3</td>
-                        <td>10</td>
+                        <td>13</td>
                         <td>SW</td>
-                        <td>90</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -351,11 +351,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "15",
                  "16",
-                 "16",
-                 "16",
-                 "16"
+                 "17",
+                 "17",
+                 "17",
+                 "17"
                ]
              },
              {
@@ -364,11 +364,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "15",
                  "16",
-                 "16",
-                 "16",
-                 "16"
+                 "17",
+                 "17",
+                 "17",
+                 "17"
                ]
              }
            ]
@@ -421,11 +421,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "39",
-                 "24",
-                 "23",
-                 "24"
+                 "3",
+                 "10",
+                 "15",
+                 "15",
+                 "15"
                ]
              },
              {
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "51",
-                 "48",
                  "49",
-                 "48"
+                 "46",
+                 "46",
+                 "47",
+                 "45"
                ]
              },
              {
@@ -445,11 +445,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
+                 "43",
                  "55",
-                 "83",
-                 "86",
-                 "90"
+                 "87",
+                 "92",
+                 "92"
                ]
              }
            ]
