--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
    </head>
    <body>
       <div style="padding:10px;border: 1px none black">
-         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
-         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jun 28 12:26:55 2018</p>
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://darksky.net/poweredby/">
+         <img class="img-responsive center-block" src="https://darksky.net/dev/img/attribution/poweredby-oneline.png" alt="" width="180"></a>
+         Last Run: Thu Jun 28 12:34:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning / Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jun 28, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -30,51 +30,51 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Overcast</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>24</td>
-                        <td>47</td>
+                        <td>Light Rain</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>33.0</td>
+                        <td>53.0</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>SSE</td>
-                        <td>82</td>
+                        <td>12</td>
+                        <td>None</td>
+                        <td>88.0</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>19</td>
-                        <td>49</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>19.0</td>
+                        <td>54.0</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>S</td>
-                        <td>79</td>
+                        <td>9</td>
+                        <td>None</td>
+                        <td>79.0</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>21</td>
-                        <td>54</td>
+                        <td>31.0</td>
+                        <td>59.0</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>SW</td>
-                        <td>77</td>
+                        <td>7</td>
+                        <td>None</td>
+                        <td>76.0</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>31</td>
-                        <td>64</td>
+                        <td>Mostly Cloudy</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>20.0</td>
+                        <td>62.0</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>W</td>
-                        <td>79</td>
+                        <td>5</td>
+                        <td>None</td>
+                        <td>78.0</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,10 +119,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "18",
+                 "18",
                  "17",
-                 "17",
-                 "17",
-                 "15"
+                 "16"
                ]
              },
              {
@@ -131,10 +131,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "18",
+                 "18",
                  "17",
-                 "17",
-                 "17",
-                 "15"
+                 "16"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "19",
-                 "21",
-                 "31"
+                 33.0,
+                 19.0,
+                 31.0,
+                 20.0
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
-                 "49",
-                 "54",
-                 "64"
+                 53.0,
+                 54.0,
+                 59.0,
+                 62.0
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "82",
-                 "79",
-                 "77",
-                 "79"
+                 88.0,
+                 79.0,
+                 76.0,
+                 78.0
                ]
              }
            ]
@@ -223,12 +223,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif"><br/><h4>Weather Radar from Alberta Hail Suppresion Project</h4>
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
-         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
-         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jun 28 12:26:55 2018</p>
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://darksky.net/poweredby/">
+         <img class="img-responsive center-block" src="https://darksky.net/dev/img/attribution/poweredby-oneline.png" alt="" width="180"></a>
+         Last Run: Thu Jun 28 12:34:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage Santos/Arsenal/Premier 03 - Lubarsky Fields</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 30, 2018 - 12:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -252,60 +253,60 @@
                         <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
+                        <td>2.0</td>
+                        <td>62.0</td>
                         <td>3</td>
-                        <td>49</td>
-                        <td>4</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>43</td>
+                        <td>9</td>
+                        <td>None</td>
+                        <td>49.0</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>10</td>
-                        <td>46</td>
+                        <td>2.0</td>
+                        <td>56.0</td>
                         <td>5</td>
-                        <td>10</td>
-                        <td>SSW</td>
-                        <td>55</td>
+                        <td>9</td>
+                        <td>None</td>
+                        <td>55.0</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>15</td>
-                        <td>46</td>
-                        <td>4</td>
-                        <td>11</td>
-                        <td>SSW</td>
-                        <td>87</td>
+                        <td>Mostly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>4.0</td>
+                        <td>52.0</td>
+                        <td>6</td>
+                        <td>10</td>
+                        <td>None</td>
+                        <td>64.0</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>15</td>
-                        <td>47</td>
-                        <td>3</td>
-                        <td>11</td>
-                        <td>SSW</td>
-                        <td>92</td>
+                        <td>Mostly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>3.0</td>
+                        <td>49.0</td>
+                        <td>5</td>
+                        <td>10</td>
+                        <td>None</td>
+                        <td>75.0</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Overcast</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>15</td>
-                        <td>45</td>
-                        <td>3</td>
-                        <td>13</td>
-                        <td>SW</td>
-                        <td>92</td>
+                        <td>Mostly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>5.0</td>
+                        <td>47.0</td>
+                        <td>4</td>
+                        <td>11</td>
+                        <td>None</td>
+                        <td>82.0</td>
                      </tr>
                   </tbody>
                </table>
@@ -353,9 +354,9 @@
                "data":[
                  "16",
                  "17",
-                 "17",
-                 "17",
-                 "17"
+                 "18",
+                 "19",
+                 "19"
                ]
              },
              {
@@ -366,9 +367,9 @@
                "data":[
                  "16",
                  "17",
-                 "17",
-                 "17",
-                 "17"
+                 "18",
+                 "19",
+                 "19"
                ]
              }
            ]
@@ -421,11 +422,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "10",
-                 "15",
-                 "15",
-                 "15"
+                 2.0,
+                 2.0,
+                 4.0,
+                 3.0,
+                 5.0
                ]
              },
              {
@@ -433,11 +434,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "46",
-                 "46",
-                 "47",
-                 "45"
+                 62.0,
+                 56.00000000000001,
+                 52.0,
+                 49.0,
+                 47.0
                ]
              },
              {
@@ -445,11 +446,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "55",
-                 "87",
-                 "92",
-                 "92"
+                 49.0,
+                 55.00000000000001,
+                 64.0,
+                 75.0,
+                 82.0
                ]
              }
            ]
